# goodreads-viz

./: README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
goodreads_viz/: __init__.py  __main__.py  goodreads.py  main.py  parse.py  url_generator.py
tests/: __init__.py  test_parse.py  test_url_generator.py
tests/test_data/: expected_result.json  sample_page.txt
